techstack issue fixed
techstack animation was messed up after letting it run for a long duration

--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-
-
-
 .gradient li:hover {
     background: rgb(255,255,255);
     background: linear-gradient(0deg, rgba(255,255,255,1) 0% , rgba(200,200,200,1) 100%);
@@ -64,11 +61,6 @@
     margin-top: 60px;
 }
 
-@media only screen and (max-width: 992px) {
-    .banner-gradient {
-
-    }
-}
 
 .banner-gradient p {
     color: white;
@@ -240,12 +232,12 @@
 
 }
 
-#techstack img {
+.animation {
     animation-name: wobble;
     animation-duration: 3s;
     animation-delay: 1s;
     animation-iteration-count: infinite;
     animation-timing-function: ease-in-out;
-    animation-play-state: paused;
+    animation-play-state: running;
 }
 
